# TaskMaster

./: CMakeLists.txt  README.md  main.cpp  scheduler.h  task.cpp  task.h
.github/workflows/: c-cpp.yml
src/: main.cpp  scheduler.cpp  task.cpp
tests/: scheduler_tests.cpp
